<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_alarm"
        android:enabled="true"
        android:icon="@drawable/ic_alarm_timeout"
        android:title="@string/tab_title_alarm"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_call"
        android:enabled="true"
        android:icon="@drawable/ic_phone_outgoing"
        android:title="@string/tab_title_call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/tab_title_profile"
        app:showAsAction="ifRoom" />
</menu>