<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:attv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/offsetCenterView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        />

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_mand_01"
        android:background="@drawable/welcome_circle_background"
        android:padding="32dp"
        android:layout_marginBottom="16dp"
        android:layout_alignBottom="@id/offsetCenterView"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/welcomeHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_view_01_title"
        style="@style/TextDisplay"
        android:layout_below="@id/welcomeImage"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        />

    <com.dragankrstic.autotypetextview.AutoTypeTextView
        android:id="@+id/autoTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        attv:animateTextTypeWithoutMistakes="@string/welcome_view_01_suggestion_gym"
        android:layout_below="@id/welcomeHeaderText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:textColor="@color/text"
        tools:text="Developer text"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_view_01_description"
        android:layout_below="@id/autoTypeText"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        />

</RelativeLayout>